<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registro"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/registro">

    <!-- color-background -->
    <View
        android:id="@+id/rectangle_register"
        android:layout_width="412dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rectangle_register" />

    <View
        android:id="@+id/color_backg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:background="@drawable/color_backg" />

    <TextView
        android:id="@+id/registrarse"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="19dp"
        android:gravity="center_horizontal|top"
        android:text="@string/registrarse"
        android:textAppearance="@style/registrarse" />

    <ImageView
        android:id="@+id/arrow_left_"
        android:layout_width="35dp"
        android:layout_height="32.38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/arrow_left" />
    <!-- user_register 1 -->
    <ImageView
        android:id="@+id/user_regist"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/user_register" />

    <TextView
        android:id="@+id/registro_co"
        android:layout_width="200dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="101dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:text="@string/subtitulo"
        android:textAppearance="@style/registro_co"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/porfavor_co"
        android:layout_width="250dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:text="@string/porfavor_co"
        android:textAppearance="@style/porfavor_co"
        android:gravity="center_horizontal|top"
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="240dp"
        android:hint="Nombre *"
        android:gravity="left|top"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:hint="Apellido *"
        android:gravity="left|top"/>


    <Switch
        android:id="@+id/sexo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="370dp"
        android:text="Sexo :"
        android:textAppearance="@style/sexo"
        android:gravity="left|top"/>


    <EditText
        android:id="@+id/fecha"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="410dp"
        android:hint="Fecha de nacimiento *"
        android:gravity="left|top"/>

    <EditText
        android:id="@+id/codigo_num"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="470dp"
        android:hint="Cód.Área*"
        android:gravity="left|top"/>

    <EditText
        android:id="@+id/codigo_num"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="160dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="470dp"
        android:hint="Número*"
        android:gravity="left|top"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="530dp"
        android:hint="Correo*"
        android:gravity="left|top"/>

    <EditText
        android:id="@+id/codigo_num"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="580dp"
        android:hint="Contraseña*"
        android:gravity="left|top"/>

    <Button
        android:id="@+id/btn_ingresa"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="650dp"
        android:background="@drawable/borde_redondo"
        android:gravity="center"
        android:text="REGISTRARSE"
        android:textSize="56px"
        android:textColor="@color/Blanco"
        android:elevation="15dp"
        />
</RelativeLayout>